<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Roadconexion</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="posted_on">Posted&#160;</string>
    <string name="posted_by">&#160;by&#160;</string>
    <string name="add_item">Submit Update</string>
    <string name="reload_list">Refresh</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="posted_in">&#160;in&#160;</string>

</resources>
