<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
   <item
      android:id="@+id/add_item"
      android:icon="@drawable/ic_action_new"
      android:showAsAction="always"
      android:title="@string/add_item">
   </item>
   <item
      android:id="@+id/reload_list"
      android:icon="@drawable/ic_action_refresh"
      android:showAsAction="always"
      android:title="@string/reload_list">
   </item>
   <item
      android:id="@+id/profile"
      android:icon="@drawable/ic_action_person"
      android:showAsAction="never"
      android:title="@string/profile">
   </item>
   <item
      android:id="@+id/settings"
      android:icon="@drawable/ic_action_settings"
      android:showAsAction="never"
      android:title="@string/settings">
   </item>
   <item
      android:id="@+id/about"
      android:icon="@drawable/ic_action_about"
      android:showAsAction="never"
      android:title="@string/about">
   </item>
</menu>